<resources>
    <string name="app_name">ALC 4 Phase 1</string>
    <string name="welcome_text">Welcome to ALC 4.0</string>
    <string name="about_alc_string">About ALC</string>
    <string name="my_profile_string">My Profile</string>
    <string name="no_internet_connection_string">Sorry, Check your internet connection</string>
    <string name="pic_desc">Developer Image</string>
    <string name="my_name">Said Mohamed</string>
    <string name="track">Track: \t Android</string>
    <string name="country">Country: \t Kenya</string>
    <string name="email">Email: \t saidmsaid81@gmail.com</string>
    <string name="phoneno">Phone Number: \t 254732718135</string>
    <string name="slack_username">Slack Username: \t saidmsaid81</string>
</resources>
